# libpngquant-Android

./: README.md  build.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/book/studio/demo/pngquant/: DemoActivity.java  DemoApplication.java
app/src/main/res/layout/: demo_activity_layout.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
libpngquant/: build.gradle
libpngquant/src/main/: AndroidManifest.xml
libpngquant/src/main/cpp/: CMakeLists.txt  pngquant.c  pngquant_bridge.cpp
libpngquant/src/main/java/com/book/studio/pngquant/: PngquantBridge.java
